Fixed backgrouund image not covering the whole page.
Moved theme variables to themes/Themes.scss.

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@ html {
 }
 
 body {
+  min-height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
