--- a/src/variables_OLD.scss
+++ b/src/variables_OLD.scss
@@ -55,3 +55,7 @@ html[data-theme="christmas"] {
   --refreshButtonColor: #a8a8a8;
   --refreshButtonHoverColor: #1cca05;
 }
+
+html[data-theme="new year's eve"] {
+  --backgroundImg: url("/images/new years eve33.jpg");
+}
